--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <br>
 
                     <label for="email">Email :</label>
-                    <input type="email" name="emial" id="email" placeholder="youremail@gmail.com" required>
+                    <input type="email" name="emial" id="email" placeholder="your_email@gmail.com" required>
 
                     <br>
 
